--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.9.0",
+    "eslint-plugin-react": "^7.28.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
